# qt-wh40k-probs

./: .gitignore  Readme.md  meson.build
src/: meson.build
src/qt-40k-stats/: StatsDisplay.cpp  StatsDisplay.hpp  main.cpp  meson.build  ui.qml  ui.qrc
